# job-scraper

./: .gitignore  CLAUDE.md  README.md  boards.example.toml  evals.example.toml  flake.nix  keywords.example  keywords.example.txt  preferences.example.md  profile.example.md  profile.txt  pyproject.toml  resume.example.md  scrape.example.toml  scrapers-todo.md
.claude/skills/: adding-scrapers.md
job_scraper/: _report_base.py  cache.py  comp.py  comp_text.py  companies.py  config.py  eval.py  hash.py  linkedin.py  llm.py  main.py  models.py  prep.py  relevance.py  report.py  rubric.py  scorer.py  status.py  status_report.py  store.py  surrogate.py
job_scraper/companies/: achira.md  aclima.md  afresh.md  ai2.md  airbnb.md  altos-labs.md  amazon.md  ambience-healthcare.md  amd.md  amp-robotics.md  amperon.md  anduril.md  anthropic.md  antithesis.md  antora-energy.md  anyscale.md  arcadia.md  array-technologies.md  aspect-biosystems.md  astral.md  atomic-ai.md  atomic-semi.md  aurora-solar.md  axiom.md  aypa-power.md  base-power.md  baseten.md  basis-research-institute.md  bayou-energy.md  bentoml.md  biorender.md  bitnomial.md  black-forest-labs.md  blackrock.md  block.md  bloom-energy.md  brex.md  camus-energy.md  cartesia.md  causal.md  (+262 more)
job_scraper/scraper/: __init__.py  _ashby.py  _breezy.py  _gem.py  _greenhouse.py  _html.py  _http.py  _icims.py  _lever.py  _phenom.py  _rippling.py  _smartrecruiters.py  _workable.py  _workday.py  achira.py  aclima.py  afresh.py  ai2.py  airbnb.py  altos_labs.py  amazon.py  ambience_healthcare.py  amd.py  amp_robotics.py  amperon.py  anduril.py  anthropic.py  antithesis.py  antora_energy.py  anyscale.py  arcadia.py  array_technologies.py  ashby.py  ashby_achira.py  ashby_baseten.py  ashby_cartesia.py  ashby_causal.py  ashby_character.py  ashby_cohere.py  ashby_cradle.py  (+346 more)
nix/: module.nix
tests/: test_compensation.py  test_main.py  test_store.py
