[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "job-scraper"
version = "0.1.0"
description = "Scrape job postings from ATS platforms, score them with Claude, and output ranked results"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic",
    "beautifulsoup4",
    "dacite",
    "httpx",
    "jinja2",
    "lxml",
    "mistune",
    "scikit-learn",
    "typer",
]

[project.scripts]
job-scraper = "job_scraper.main:app"

[tool.setuptools.packages.find]
include = ["job_scraper*"]

[tool.setuptools.package-data]
"job_scraper.companies" = ["*.md"]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific
    "W",     # pycodestyle warnings
    "ASYNC", # flake8-async
    "S",     # flake8-bandit (security)
    "PTH",   # flake8-use-pathlib
    "T20",   # flake8-print
]
ignore = [
    "E402",  # module-level import not at top of file
    "T201",  # print found
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.pyrefly]
project_includes = ["job_scraper"]
